# spirom

./: .gitignore  BLOG_CHECKLIST.md  BLOG_SETUP.md  CLAUDE.md  QUICKSTART.md  README.md  README_BLOG.md  SANITY_SETUP_QUICKSTART.md  SECURITY_AUDIT_REPORT.md  STARTUP_GUIDE.md  STRIPE_BACKEND_IMPLEMENTATION.md  STRIPE_GUIDE.md  a.md  env.md  package-lock.json  package.json  turbo.json  概要.md
apps/api/: .env.example  Cargo.toml  Dockerfile  SPECIFICATION.md  SQL_SETUP_STOCK_RPC.md  env.example  fly.toml
apps/api/migrations/: 001_add_product_variants.sql  002_login_attempts.sql  003_add_tshirt_details.sql  004_contact_submissions.sql  005_guest_checkout.sql  006_add_guest_policies_to_partitions.sql  007_add_country_to_addresses.sql  008_jpyc_payment.sql
apps/api/src/: main.rs
apps/api/src/config/: mod.rs
apps/api/src/db/: mod.rs  schema.rs  supabase.rs
apps/api/src/db/repositories/: cart_repository.rs  category_repository.rs  login_attempts_repository.rs  mod.rs  order_repository.rs  product_repository.rs  review_repository.rs  token_blacklist_repository.rs  user_repository.rs
apps/api/src/error/: mod.rs
apps/api/src/handlers/: auth.rs  cart.rs  categories.rs  contact.rs  health.rs  jpyc.rs  mfa.rs  mod.rs  orders.rs  payments.rs  products.rs  reviews.rs  users.rs
apps/api/src/middleware/: auth.rs  mod.rs  rate_limiter.rs  security_headers.rs  session.rs
apps/api/src/models/: address.rs  auth.rs  cart.rs  category.rs  common.rs  mod.rs  order.rs  product.rs  review.rs  user.rs
apps/api/src/routes/: mod.rs
apps/api/src/services/: auth_service.rs  mod.rs  password.rs
apps/api/src/services/payment/: jpyc.rs  mod.rs  provider.rs  reconciler.rs  stripe.rs
apps/api/src/utils/: mod.rs  sanitize.rs
apps/bff/: .dev.vars  ARCHITECTURE.md  Cargo.toml  package-lock.json  wrangler.toml
apps/bff/.wrangler/tmp/bundle-0NsKki/: middleware-loader.entry.ts
apps/bff/.wrangler/tmp/bundle-JXq84P/: middleware-loader.entry.ts
apps/bff/.wrangler/tmp/bundle-WF4eRo/: middleware-insertion-facade.js  middleware-loader.entry.ts
apps/bff/.wrangler/tmp/bundle-fzAID9/: middleware-loader.entry.ts
apps/bff/src/: error.rs  lib.rs  router.rs
apps/bff/src/cache/: mod.rs
apps/bff/src/handlers/: bff.rs  health.rs  mod.rs  orders.rs  proxy.rs  seo_handlers.rs
apps/bff/src/middleware/: cors.rs  mod.rs  rate_limiter.rs  security.rs
apps/bff/src/models/: blog.rs  category.rs  home.rs  mod.rs  product.rs  seo.rs
apps/bff/src/seo/: mod.rs
apps/bff/src/services/: aggregator.rs  api_client.rs  mod.rs  sanity_client.rs
(+277 files in other folders)
